--- a/src/blocks/sliders/fixes.styl
+++ b/src/blocks/sliders/fixes.styl
@@ -43,6 +43,10 @@
 		&.active
 			// background-color pink
 			background-color blue-light
+	
+	&-stage
+		margin-left auto
+		margin-right auto
 
 	@media (min-width tablet)
 		&-nav
